--- a/Projet_7/style.css
+++ b/Projet_7/style.css
@@ -9,10 +9,10 @@ body {
 }
 
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Lato', Arial, sans-serif;
     text-decoration: none;
     color: black;
-    font-style: 14px;
+    font-size: 12px;
 }
 
 .bloc_page {
@@ -28,14 +28,21 @@ a:link, a:visited, a:active {
 
 /* Main */
 #logo {
-    color: rgb(207, 78, 32);
+    margin-top: 10px;
+    color: #D04F4F;
+    position: relative;
+    right: 45%;
+    left: 48%;
+    bottom: 0%;
 }
 
 h1 {
+    font-family: DM Sans, sans-serif;
     font-size: 38px;
     letter-spacing: 1px;
-    color: rgb(207, 78, 32);
+    color: #D04F4F;
     text-align: center;
+    margin-top: 0px;
 }
 
 /* Search bar */
@@ -43,7 +50,7 @@ h1 {
     margin-top: 15px;
     height: 55px;
     width: 100%;
-    background-color: rgb(235, 235, 235);
+    background-color: #E7E7E7;
     border-radius: 5px;
     border: none;
     outline: none;
@@ -51,15 +58,15 @@ h1 {
 
 ::placeholder {
     padding-left: 10px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Lato, sans-serif;
     font-size: 16px;
-    color: rgb(179, 179, 179);
-    font-weight: 300;
+    color: #000000;
+    opacity: 0.25;
 }
 
 #search_icon {
     position: absolute;
-    top: 137px;
+    top: 174px;
     right: 110px;
 }
 
@@ -70,8 +77,8 @@ h1 {
 }
 
 .select_buttons {
-    height: 60px;
-    width: 150px;
+    height: 69px;
+    width: 170px;
     border: none;
     border-radius: 5px;
     margin-right: 15px;
@@ -84,38 +91,30 @@ h1 {
 .arrow {
     position: relative;
     display: inline-block;
-    top: -2px;
-    border: solid white;
-    border-width: 0 2px 2px 0;
-    padding: 4px;
 }
 
-.arrow_down {
-    transform: rotate(45deg);
+#arrow_first {
+    right: -40px;
 }
 
-.arrow_first_button {
-    right: -25px;
+#arrow_second {
+    right: -48px;
 }
 
-.arrow_second_button {
-    right: -39px;
-}
-
-.arrow_third_button {
-    right: -32px;
+#arrow_third {
+    right: -45px;
 }
 
 #ingredients {
-    background-color: rgb(40, 133, 255);
+    background-color: #3282F7;
 }
 
 #appareils {
-    background-color: rgb(53, 218, 152);
+    background-color: #68D9A4;
 }
 
 #ustensils {
-    background-color: rgba(255, 87, 75, 0.897);
+    background-color: #ED6454;
 }
 
 /* Section */
@@ -133,7 +132,7 @@ h1 {
     width: 100%;
     border-radius: 5px;
     width: 31%;
-    border: 1px solid red;
+    background-color: #E7E7E7;
 }
 
 .recipe_card a *:not(img) {
@@ -145,10 +144,58 @@ h1 {
     object-fit: cover;
     height: 200px;
     width: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 h2 {
-    font-size: 17px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 18px;
     margin-left: 10px;
+    font-weight: 400;
+}
+
+.title_aside {
+    position: relative;
+    display: inline-block;
+    right: -65%;
+    top: -55px;
+}
+
+.clock_icon {
+    position: relative;
+    top: 10px;
+}
+
+.recipe_time {
+    position: relative;
+    right: 9px;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.recipe {
+    display: flex;
+    margin-top: -40px;
+    line-height: 14px;
+}
+
+.ingredients {
+    font-weight: 700;
+    display: block;
+}
+
+.ingredients_quantities {
+    font-weight: 400;
+}
+
+.preparation {
+    width: 185px;
+    height: 86px;
+    font-family: Roboto;
+    margin-top: 0px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
 }
