--- a/Projet_7/style.css
+++ b/Projet_7/style.css
@@ -128,6 +128,10 @@ input[type="search"]::-webkit-search-results-decoration {
     background-color: #ED6454;
 }
 
+.hidden {
+    display: none;
+}
+
 /* Select buttons */
 
 .buttons_container {
@@ -294,11 +298,11 @@ h2 {
     font-weight: 400;
 }
 
-.container_preparation {
+.container_description {
     margin-left: 20px;
 }
 
-.preparation {
+.description {
     width: 200px;
     height: 86px;
     font-family: Roboto;
