--- a/Projet_7/style.css
+++ b/Projet_7/style.css
@@ -134,38 +134,46 @@ input[type="search"]::-webkit-search-results-decoration {
 
 /* Select buttons */
 
-.buttons_container {
+.dropdown_container {
     margin-top: 25px;
+    display: flex;
 }
 
-.select_buttons {
+.select {
+    display: flex;
+}
+
+.dropdown_buttons {
     height: 69px;
     width: 170px;
     border: none;
     border-radius: 5px;
-    margin-right: 15px;
+    margin-right: 25px;
     font-size: 16px;
     color: white;
     text-align: start;
     padding-left: 15px;
+    cursor: pointer;
+}
+
+.dropdown_buttons_selected {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 .arrow {
     position: relative;
     display: inline-block;
     cursor: pointer;
+    top: 15px;
+    right: 30px;
 }
 
-#arrow_first {
-    right: -40px;
-}
-
-#arrow_second {
-    right: -48px;
-}
-
-#arrow_third {
-    right: -45px;
+.arrow_rotate {
+    transform: rotate(180deg);
+    position: relative;
+    right: 90px;
+    top: -15px;
 }
 
 #ingredients {
@@ -178,6 +186,35 @@ input[type="search"]::-webkit-search-results-decoration {
 
 #ustensils {
     background-color: #ED6454;
+}
+
+.menu {
+    list-style: none;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 100%;
+    position: relative;
+    top: -12px;
+    opacity: 0;
+    display: none;
+    color: white;
+    font-size: 14px;
+    font-family: lato;
+    margin-top: 5px;
+    padding-bottom: 10px;
+    padding: 10px;
+}
+
+.menu li {
+    display: flex;
+    line-height: 2em;
+    border: 1px solid red;
+    flex-wrap: wrap;
+}
+
+.menu_open {
+    display: inline-flex;
+    opacity: 1;
 }
 
 .modify_position {
@@ -204,14 +241,6 @@ input[type="search"]::-webkit-search-results-decoration {
 input.dropdown_search {
     color: white;
     font-weight: 700;
-}
-
-.arrow_dropdown {
-    position: relative;
-    top: -35px;
-    right: 70px;
-    transform: rotate(180deg);
-    cursor: pointer;
 }
 
 #dropdown_ingredients {
