--- a/Projet_7/style.css
+++ b/Projet_7/style.css
@@ -198,27 +198,31 @@ input[type="search"]::-webkit-search-results-decoration {
     opacity: 0;
     display: none;
     color: white;
-    font-size: 14px;
+    font-size: 16px;
     font-family: lato;
     margin-top: 5px;
     padding-bottom: 10px;
     padding: 10px;
 }
 
-.menu li {
+.menu_li {
     display: flex;
-    line-height: 2em;
-    border: 1px solid red;
-    flex-wrap: wrap;
+    flex-basis: 170px;
+    margin: 10px 5px 10px 5px;
 }
 
 .menu_open {
-    display: inline-flex;
+    display: flex;
     opacity: 1;
+    flex-wrap: wrap;
+    gap: 30px;
+    width: 667px;
+    height: 398px;
+    overflow: scroll;
 }
 
 .modify_position {
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 /* Dropdown hidden tools */
